<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.th3snehasish.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textTitle"
                android:text="@string/my_nanodegree_apps"
                android:textAlignment="gravity"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginBottom="25dp"/>
            <Button
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/spotify"
                android:id="@+id/spotifyBtn"
                android:padding="20dp"
                android:layout_marginBottom="5dp"
                android:background="@color/color_udacity"/>
            <Button
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/scores"
                android:id="@+id/scoresBtn"
                android:padding="20dp"
                android:layout_marginBottom="5dp"
                android:background="@color/color_udacity"/>
            <Button
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/library"
                android:id="@+id/libraryBtn"
                android:padding="20dp"
                android:layout_marginBottom="5dp"
                android:background="@color/color_udacity"/>
            <Button
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/build_it"
                android:id="@+id/buildItBigBtn"
                android:padding="20dp"
                android:layout_marginBottom="5dp"
                android:background="@color/color_udacity"/>
            <Button
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/xyz_reader"
                android:id="@+id/xyzBtn"
                android:padding="20dp"
                android:layout_marginBottom="5dp"
                android:background="@color/color_udacity"/>
            <Button
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:text="@string/capstone"
                android:id="@+id/capstoneBtn"
                android:padding="20dp"
                android:layout_marginBottom="5dp"
                android:background="@color/color_capstone"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
